# setup-stackblock-test

./: .gitignore  CMakeLists.txt  MANIFEST.in  OverlapHelement.C  README.md  Stackwavefunction.C  dmrg.C  fciqmchelper.C  fciqmchelper.h  global.h  initblocks.C  input.C  readrotationmatrix.C  setup.py  sweep_mps.C  wrapper.C
.github/actions/build-wheel/: action.yml  entrypoint.sh
.github/workflows/: build.yml
modules/mps_nevpt/: type1.C
modules/npdm/: externalsort.C  externalsort.h  fourpdm_container.C  npdm.C  npdm_expectations.C  threepdm_container.C
modules/twopdm/: sweep.C
newmat10/: CMakeLists.txt
