CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

FIND_PROGRAM(CMAKE_C_COMPILER NAMES $ENV{CC} gcc PATHS ENV PATH NO_DEFAULT_PATH)
FIND_PROGRAM(CMAKE_CXX_COMPILER NAMES $ENV{CXX} g++ PATHS ENV PATH NO_DEFAULT_PATH)

SET(PROJECT_NAME block.spin_adapted)
PROJECT(${PROJECT_NAME} VERSION 1.5.3)

MESSAGE(STATUS "PROJECT_NAME = ${PROJECT_NAME}")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

ADD_SUBDIRECTORY(src/newmat10)

IF (${BOOST_OLD})
    SET(BOOST_FLAG "-DBOOST_NO_CXX11_SCOPED_ENUMS")
ELSE()
    SET(BOOST_FLAG "-DBOOST_1_56_0")
ENDIF()

